whether tg-bot ui

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   app:
+    env_file:
+      - app/.env.secure
     build:
       context: ../
       dockerfile: deploy/app/Dockerfile
-    environment:
-      APP_TELEGRAM_BOT_TOKEN: "token" # todo hide on remote
+    volumes:
+      - ../:/app
