--- a/deploy/app/Dockerfile
+++ b/deploy/app/Dockerfile
@@ -7,6 +7,6 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o ./bin/app ./cmd/
+RUN go install github.com/cosmtrek/air@latest
 
-CMD ["./bin/app"]
+CMD ["air", "-c", "./deploy/app/.air.toml"]
